1) Create popup area component 2) Update badge demonstration with popup 3) Create confirmation area 4) Create button demonstration with confirmation

--- a/projects/your-style/src/lib/form/date-time-picker/date-time-picker.component.html
+++ b/projects/your-style/src/lib/form/date-time-picker/date-time-picker.component.html
@@ -4,6 +4,6 @@
     <span class="your-form-field_clear" (click)="clearValue($event)"><i class="fas fa-times"></i></span>
     <i class="far fa-calendar-alt"></i>
   </div>
-  <your-calendar [onDateSelected]="onDateSelect" [style]="yourStyle" [selectedDate]="value" yourDropDownMenu></your-calendar>
+  <your-calendar [onDateSelected]="onDateSelect" [style]="yourStyle" [selectedDate]="value" yourDropDownArea></your-calendar>
 </div>
 
