--- a/src/app/badge-demonstration/badge-demonstration.component.html
+++ b/src/app/badge-demonstration/badge-demonstration.component.html
@@ -7,4 +7,17 @@
 <div class="your-badge default">Default badge</div>
 <div class="your-badge success">Success badge</div>
 <div class="your-badge warn">Warn badge</div>
-<div class="your-badge error">Error badge</div>
+
+
+<div class="your-badge error"
+     yourPopupAreaTrigger="click"
+     [popupDelay]="350"
+>
+  <div yourPopupArea class="your-badge error" position="bottom center">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  </div>
+  Error badge with description
+</div>
