--- a/projects/your-style/src/lib/form/select/select.component.html
+++ b/projects/your-style/src/lib/form/select/select.component.html
@@ -1,31 +1,22 @@
-<div class="your_form_field" yourDropDownTrigger>
-  <div class="your-form-field_value your_select_value_single" *ngIf="!multiple">{{getSelectedLabel(value)}}</div>
+<div class="form_field_value">
+  <span class="your_select_value_single" *ngIf="hasValue() && !!options">{{getLabelValue(getOptionByBindValue(value))}}</span>
+</div>
 
-  <div class="your-form-field_value" *ngIf="multiple">
-    <div *ngFor="let selected of value; let index = index" class="your_select_multiple_value"
-         yourFlexBox="horizontal" flexInline vAlignment="center" hAlignment="start"
-    >
-      <span class="your_select_multiple_value_label">{{getSelectedLabel(selected)}}</span>
-      <span class="your_select_clear" (click)="deleteSelected($event, index)"><i class="fas fa-times"></i></span>
-    </div>
-  </div>
+<your-options
+  [options]="options"
+  [filterFunction]="filterFunction"
+  (onSelect)="selectOption($event)"
+  [selectedOptions]="getSelectedOptions()"
+  [disabledOptions]="disabledOptions"
+  [closeOnSelect]="closeOnSelect"
+  [getLabelValue]="getLabelValue"
+  yourPopupArea
+  position="bottom center"
+  width="100%"
+>
+</your-options>
 
-  <div class="your_form_field_icon">
-    <span class="your-form-field_clear" (click)="clearValue($event)"><i class="fas fa-times"></i></span>
-    <i class="fas fa-caret-down"></i>
-  </div>
-
-  <div yourDropDownArea>
-    <div class="your_drop_drown_body">
-      <input class="your_select_search_input" [(ngModel)]="searchValue" placeholder="Type to filter">
-      <span *ngIf="!(options | filterSelect: searchValue: filterFunction).length" class="your_select_options_warn">
-        No options found
-      </span>
-      <div class="your_form_control-select-option" [ngClass]="{'disabled': valueHasOption(option)}"
-           *ngFor="let option of options | filterSelect: searchValue: filterFunction" (click)="onOptionSelect(option)"
-      >
-        {{getLabelValue(option)}}
-      </div>
-    </div>
-  </div>
+<div class="form_field_icons">
+  <span class="form_field_iconform_field_icon_clear" *ngIf="hasValue()" (click)="clearValue($event)"><i class="fas fa-times"></i></span>
+  <i class="form_field_icon fas fa-caret-down"></i>
 </div>
