--- a/projects/your-style/src/lib/theming/theme.scss
+++ b/projects/your-style/src/lib/theming/theme.scss
@@ -10,6 +10,8 @@
 @import "info-box";
 @import 'link';
 @import "main";
+@import "multiple-select";
+@import "options";
 @import 'padding-and-margin';
 @import "popup-area";
 @import "tab";
@@ -25,7 +27,9 @@
   @include font_style($style);
   @include form_field_style($style);
   @include info_box_style($style);
+  @include multiple_select_style($style);
   @include padding_and_margin_style($style);
+  @include options_style($style);
 }
 
 @mixin theme($theme) {
@@ -38,7 +42,9 @@
   @include form_field_theme($theme);
   @include info_box_theme($theme);
   @include link_theme($theme);
+  @include multiple_select_theme($theme);
   @include body_theme($theme);
+  @include options_theme($theme);
   @include tab_theme($theme);
   @include table_theme($theme);
 }
