--- a/src/app/badge-demonstration/badge-demonstration.component.html
+++ b/src/app/badge-demonstration/badge-demonstration.component.html
@@ -10,10 +10,10 @@
 
 
 <div class="your-badge error"
-     yourPopupAreaTrigger="click"
+     yourPopupAreaTrigger="hover"
      [popupDelay]="350"
 >
-  <div yourPopupArea class="your-badge error" position="bottom center">
+  <div yourPopupArea class="your-badge error" position="bottom center" width="250px">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit,
     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     Lorem ipsum dolor sit amet, consectetur adipiscing elit,
