--- a/src/app/select-demonstration/select-demonstration.component.html
+++ b/src/app/select-demonstration/select-demonstration.component.html
@@ -1,4 +1,26 @@
 <div>
+
+  <your-card size="l" yourFlexBox="horizontal" wrap yourFlexBoxBasis="250px" maxWidth="500px">
+
+    <h3 class="p-b-md" style="width:100%">Multiple select</h3>
+    <!--    <h5 class="p-b-md">Bound value is object, displayed value is calculated in input function</h5>-->
+    <your-form-field label="Mountains" [ngClass]="{error: !multipleMountains}">
+      <your-multiple-select
+        [options]="mountains"
+        [(ngModel)]="multipleMountains"
+        required
+        keyOfValue="id"
+        labelValue="name"
+      ></your-multiple-select>
+      <span formFieldInfo *ngIf="!multipleMountains">At least one mountain should be selected</span>
+    </your-form-field>
+
+    <your-form-field label="Hi!">
+      <input yourInput>
+    </your-form-field>
+
+  </your-card>
+
   <your-card size="l" yourFlexBox="vertical" yourFlexBoxBasis="250px" maxWidth="250px">
 
     <h3 class="p-b-md">String array</h3>
