--- a/projects/your-style/src/lib/form/date-time-picker/date-time-picker.component.html
+++ b/projects/your-style/src/lib/form/date-time-picker/date-time-picker.component.html
@@ -1,5 +1,5 @@
-<div class="your_form_field" yourDropDownTrigger>
-  <div  class="your-form-field_value">{{getValueLabel()}}</div>
+<div class="form_field_content" yourDropDownTrigger>
+  <div  class="form_field_value_content">{{getValueLabel()}}</div>
   <div class="your_form_field_icon">
     <span class="your-form-field_clear" (click)="clearValue($event)"><i class="fas fa-times"></i></span>
     <i class="far fa-calendar-alt"></i>
