--- a/projects/your-style/src/lib/form/form-field/form-field.component.scss
+++ b/projects/your-style/src/lib/form/form-field/form-field.component.scss
@@ -1,42 +1,90 @@
-your-form-field {
-  display: inline-block;
-  vertical-align: top;
+@mixin display_properties {
+  position: relative;
+  display: inline-flex;
+  width: 200px;
 
   &.inline {
+    display: flex;
     width: 100%;
   }
 
-  position: relative;
-  width: 200px;
-  margin: 2px;
+  flex-direction: column;
+}
 
-  .your-form-field_value {
-    min-height: 1.2em;
-    width: 100%;
-  }
-
-  .your-form-field_clear {
-    display: none;
+@mixin content_style {
+  .form_field_content {
+    position: relative;
+    border-width: 1px;
+    border-style: solid;
+    outline: none;
+    transition: border-color 150ms ease-in-out;
     cursor: pointer;
-    outline: none;
-    padding: 0 5px;
 
-    transition: color 150ms ease-in-out;
+    .form_field_value {
+      min-height: 1.145em;
+    }
   }
 
-  &.filled .your-form-field_clear {
-    display: initial;
-  }
-
-  input, textarea {
-    padding: 0;
-    color: inherit;
-    font-size: inherit;
+  [yourInput] {
     width: 100%;
-    border: none;
-    outline: none;
-    background: none;
+    font-size: inherit;
+    font-weight: 100;
+    color: inherit;
+  }
+}
+
+@mixin header_style {
+  your-label, .form_field_icons {
+    border: 1px solid transparent;
+    position: absolute;
+    top: 0;
+    user-select: none;
+    pointer-events: none;
+    transition: transform 200ms ease-in-out, opacity 150ms ease-in-out, padding 150ms ease-in-out;
   }
 
-  cursor: pointer;
+  your-label {
+    left: 0;
+    transform-origin: top left;
+    opacity: 0.5;
+  }
+
+  .form_field_icons {
+    right: 0;
+    transform-origin: top right;
+
+    .form_field_icon {
+      padding: 0 4px;
+      cursor: pointer;
+    }
+
+    .form_field_icon_clear {
+      pointer-events: initial;
+    }
+  }
+
+  &.focused your-label {
+    opacity: 1;
+  }
+
+  &.focused, &.filled {
+    your-label {
+      transform: scale(0.8) translate(-5px, -7px);
+    }
+
+    .form_field_icons {
+      transform: scale(0.8) translate(5px, -7px);
+    }
+  }
+
+  [formFieldInfo] {
+    padding: 3px 5px;
+    font-weight: 400;
+  }
+}
+
+your-form-field {
+  @include display_properties;
+  @include content_style;
+  @include header_style;
 }
