--- a/projects/your-style/src/lib/theming/form-field.scss
+++ b/projects/your-style/src/lib/theming/form-field.scss
@@ -1,83 +1,70 @@
 @import "config";
-@import "select";
 
 @mixin form_field_style($style) {
   your-form-field {
-    border-radius: map_get($style, border_radius);
+    $size_config: get_config($style, form_config);
+    $default_size_config_name: map_get($style, default_form_config);
 
-    @include size_style($style);
-    @include label_style();
-    @include options_style($style);
+    .form_field_content {
+      border-radius: map_get($style, border_radius);
+    }
+
+    @include get_style($size_config, $default_size_config_name);
+
+    @each $size_config_name in get_config_names($size_config) {
+      &.your-form-field-size-#{$size_config_name} {
+        @include get_style($size_config, $size_config_name);
+      }
+    }
+  }
+}
+
+@mixin get_style($size_config, $size_config_name) {
+  $font_size: get_config_prop($size_config, $size_config_name, font_size);
+  font-size: $font_size;
+
+  [formFieldInfo] {
+    font-size: calc(#{$font_size} - 2px);
+  }
+
+  .form_field_content {
+    padding: get_config_prop($size_config, $size_config_name, padding);
+  }
+
+  your-label, .form_field_icons {
+    padding: get_config_prop($size_config, $size_config_name, label_padding);
   }
 }
 
 @mixin form_field_theme($theme) {
+  $scheme: get_color_scheme($theme, back);
+
   your-form-field {
-    $scheme: get_color_scheme($theme, back);
-    background: transparentize(darken(get_color($scheme), 10), 0.6);
     color: get_color($scheme, f);
 
-    @include options_theme($theme);
-  }
-}
+    .form_field_content {
+      $normal: darken(get_color($scheme), 4);
+      background: $normal;
+      border-color: $normal;
 
-@mixin size_style($style) {
-  $size_config: get_config($style, form_config);
-  $default_size_config_name: map_get($style, default_form_config);
-
-  font-size: get_config_prop($size_config, $default_size_config_name, font_size);
-  [yourInput], .your_form_field {
-    outline: none;
-    padding: get_config_prop($size_config, $default_size_config_name, padding);
-  }
-
-  your-label, .your_form_field_icon {
-    padding: get_config_prop($size_config, $default_size_config_name, label_padding);
-  }
-
-  @each $size_config_name in get_config_names($size_config) {
-    &.your-form-field-size-#{$size_config_name} {
-
-      font-size: get_config_prop($size_config, $size_config_name, font_size);
-      [yourInput], .your_form_field {
-        padding: get_config_prop($size_config, $size_config_name, padding);
-      }
-
-      your-label, .your_form_field_icon {
-        padding: get_config_prop($size_config, $size_config_name, label_padding);
+      &:focus, &.focused {
+        border-color: lighten(get_color($scheme), 30);
       }
     }
-  }
-}
 
-@mixin label_style() {
-  your-label, .your_form_field_icon {
-    position: absolute;
-    font-size: inherit;
-    top: 0;
-    transition: all 250ms ease-in-out;
-    opacity: 0.5;
-  }
+    $error_scheme: get_color_scheme($theme, error);
+    &.error  {
+      .form_field_content {
+        border-color: get_color($error_scheme);
+      }
 
-  your-label {
-    transform-origin: top left;
-    user-select: none;
-    pointer-events: none;
-  }
-
-  .your_form_field_icon {
-    transform-origin: top right;
-    right: 0;
-  }
-
-  &.focused, &.filled {
-    your-label, .your_form_field_icon {
-      padding: 8px;
-      transform: scale(0.7);
+      [formFieldInfo] {
+        color: get_color($error_scheme);
+      }
     }
-  }
 
-  &.focused your-label {
-    opacity: 1;
+    .form_field_icon_clear:hover {
+      color: get_color($error_scheme);
+    }
   }
 }
