--- a/projects/your-style/src/lib/form/date-time-picker/calendar/calendar.component.html
+++ b/projects/your-style/src/lib/form/date-time-picker/calendar/calendar.component.html
@@ -1,3 +1,4 @@
+<div class="your_drop_down_content">
   <div yourFlexBox="horizontal" hAlignment="space-between" vAlignment="center" class="your_calendar-header">
 
     <span
@@ -25,7 +26,7 @@
 
     <div *ngFor="let week of selectedMonthView" yourFlexBox="horizontal" hAlignment="space-between">
 
-      <div *ngFor="let date of week" (click)="selectDate(date)"
+      <div *ngFor="let date of week" (click)="selectDate($event, date)"
            yourFlexBox="horizontal" flexInline vAlignment="center" hAlignment="center"
            class="your_calendar-date" [ngClass]="{'dif_month': isDifferentMonth(date), 'selected': isSelected(date)}"
       >
@@ -34,3 +35,4 @@
 
     </div>
   </div>
+</div>
