--- a/projects/your-style/src/lib/theming/drop-down-menu.scss
+++ b/projects/your-style/src/lib/theming/drop-down-menu.scss
@@ -1,13 +1,8 @@
 @import "config";
 
 .your_drop_down_content {
-  position: absolute;
-  overflow: scroll;
-  z-index: 100;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  max-height: 0;
+  padding: 3px;
+  margin-top: 3px;
 
   transition: max-height 250ms ease-in-out;
 
