--- a/projects/your-style/src/lib/form/select/single-select/select.component.html
+++ b/projects/your-style/src/lib/form/select/single-select/select.component.html
@@ -9,7 +9,8 @@
   [selectedOptions]="getSelectedOptions()"
   [disabledOptions]="disabledOptions"
   [closeOnSelect]="closeOnSelect"
-  [getLabelValue]="getLabelValue"
+  [labelValue]="getLabelValue"
+  [searchEnabled]="true"
   yourPopupArea
   position="bottom center"
   width="100%"
