--- a/src/app/button-demonstration/button-demonstration.component.html
+++ b/src/app/button-demonstration/button-demonstration.component.html
@@ -2,3 +2,16 @@
   <your-confirmation-area yourPopupArea (onSubmit)="onSubmit()" (onDecline)="onDecline()"></your-confirmation-area>
   Simple button
 </button>
+
+
+<button yourButton [yourPopupAreaTrigger]>
+  <your-options
+    [options]="options"
+    (onSelect)="onSelect($event)"
+    yourPopupArea
+    position="bottom center"
+    width="100%"
+  ></your-options>
+  <your-confirmation-area yourPopupArea (onSubmit)="onSubmit()" (onDecline)="onDecline()"></your-confirmation-area>
+  Button with dropdown select
+</button>
