--- a/projects/your-style/src/lib/form/select/multiple-select/multiple-select.component.html
+++ b/projects/your-style/src/lib/form/select/multiple-select/multiple-select.component.html
@@ -16,7 +16,8 @@
   [selectedOptions]="getSelectedOptions()"
   [disabledOptions]="disabledOptions"
   [closeOnSelect]="closeOnSelect"
-  [getLabelValue]="getLabelValue"
+  [labelValue]="getLabelValue"
+  [searchEnabled]="true"
   yourPopupArea
   position="bottom center"
   width="100%"
