--- a/projects/your-style/src/lib/form/form-field/form-field.component.scss
+++ b/projects/your-style/src/lib/form/form-field/form-field.component.scss
@@ -2,6 +2,8 @@
   position: relative;
   display: inline-flex;
   width: 200px;
+  padding: 1px;
+  vertical-align: top;
 
   &.inline {
     display: flex;
