Fix square inline button

--- a/projects/your-style/src/lib/theming/button.scss
+++ b/projects/your-style/src/lib/theming/button.scss
@@ -45,6 +45,10 @@
     align-items: center;
     justify-content: center;
     flex-wrap: nowrap;
+
+    &.inline {
+      display: inline-flex;
+    }
   }
 
   &.inline {
