--- a/projects/your-style/src/lib/form/select/single-select/select.component.html
+++ b/projects/your-style/src/lib/form/select/single-select/select.component.html
@@ -18,6 +18,6 @@
 </your-options>
 
 <div class="form_field_icons">
-  <span class="form_field_iconform_field_icon_clear" *ngIf="hasValue()" (click)="clearValue($event)"><i class="fas fa-times"></i></span>
+  <span class="form_field_icon form_field_icon_clear" *ngIf="hasValue()" (click)="clearValue($event)"><i class="fas fa-times"></i></span>
   <i class="form_field_icon fas fa-caret-down"></i>
 </div>
