--- a/projects/your-style/src/lib/theming/config.scss
+++ b/projects/your-style/src/lib/theming/config.scss
@@ -21,3 +21,7 @@
 @function get_color($scheme, $hue: n) {
   @return map_get($scheme, $hue);
 }
+
+@function get_gradient_background($color1, $color2, $deg: 90deg, $repeat: inherit, $position: inherit) {
+  @return linear-gradient($deg, $color1, $color2) $repeat $position;
+}
