Create loading module. Refactoring according to TsLint Fix Confirmation area

--- a/projects/your-style/src/lib/form/login/login.component.html
+++ b/projects/your-style/src/lib/form/login/login.component.html
@@ -23,6 +23,7 @@
 
   <button
     yourButton type="submit"
+    (click)="onLogin()"
     size="m"
     color="secondary"
     [disabled]="loginForm.invalid"
