--- a/projects/your-style/src/lib/layout/confirmation-area/confirmation-area.component.html
+++ b/projects/your-style/src/lib/layout/confirmation-area/confirmation-area.component.html
@@ -1,4 +1,4 @@
-<your-card yourFlexBox="horizontal" vAlignment="center">
+<your-card display="flex" yourFlexBox="horizontal" vAlignment="center">
   <div class="confirmation-info" #confirmationInfo>
     <ng-content select="[confirmationInfo]"></ng-content>
   </div>
