--- a/src/app/loading/loading-skeleton-demonstration/loading-skeleton-demonstration.component.html
+++ b/src/app/loading/loading-skeleton-demonstration/loading-skeleton-demonstration.component.html
@@ -1,7 +1,7 @@
-<your-card size="l">
-  <button yourButton type="button" (click)="toggleLoading()">{{loadingIndicator ? 'Stop loading' : 'Start loading'}}</button>
+<div [yourLoadingSkeletonBox]="loadingIndicator">
+  <your-card size="l">
+    <button yourButton type="button" (click)="toggleLoading()">{{loadingIndicator ? 'Stop loading' : 'Start loading'}}</button>
 
-  <div [yourLoadingSkeletonBox]="loadingIndicator">
-    <div *ngFor="let i of [1, 2, 3]" [yourLoadingSkeleton]="i" [useAutoSize]="true" [widthPart]="10" [heightPart]="1"></div>
-  </div>
-</your-card>
+    <div *ngFor="let i of [1, 2, 3]" [yourLoadingSkeleton]="i"></div>
+  </your-card>
+</div>
