--- a/projects/your-style/src/lib/theming/config.scss
+++ b/projects/your-style/src/lib/theming/config.scss
@@ -25,3 +25,9 @@
 @function get_gradient_background($color1, $color2, $deg: 90deg, $repeat: inherit, $position: inherit) {
   @return linear-gradient($deg, $color1, $color2) $repeat $position;
 }
+
+@mixin reset_button {
+  background: #00000000;
+  border: 0;
+  outline: none;
+}
