Pagination: 1) Add bias in pages 2) Update pages state if totalPages has been changed.

--- a/projects/your-style/src/lib/pagination/pages/pages.component.html
+++ b/projects/your-style/src/lib/pagination/pages/pages.component.html
@@ -9,6 +9,8 @@
     <i class="fas fa-chevron-left"></i>
   </button>
 
+  <span *ngIf="totalPages <= 0">No content</span>
+
   <button
     class="your-page-element your-page-button"
     *ngFor="let pageNumber of firstPages"
