--- a/projects/your-style/src/lib/pagination/pages/pages.component.scss
+++ b/projects/your-style/src/lib/pagination/pages/pages.component.scss
@@ -1,7 +1,10 @@
 :host {
   display: flex;
   flex-direction: column;
-  align-items: center;
+
+  .your-pages {
+    align-self: center;
+  }
 }
 
 .your-page-element {
