* Fix calendar * Fix touched state in dropdown form fields

--- a/src/app/calendar-demonstration/calendar-demonstration.component.html
+++ b/src/app/calendar-demonstration/calendar-demonstration.component.html
@@ -1,3 +1,5 @@
-<your-form-field label="Calendar">
-  <your-date-time-picker [(ngModel)]="date"></your-date-time-picker>
-</your-form-field>
+<form [formGroup]="calendarForm">
+  <your-form-field label="Calendar">
+    <your-date-time-picker formControlName="date"></your-date-time-picker>
+  </your-form-field>
+</form>
