--- a/projects/your-style/src/lib/layout/confirmation-area/confirmation-area.component.scss
+++ b/projects/your-style/src/lib/layout/confirmation-area/confirmation-area.component.scss
@@ -1,7 +1,9 @@
 :host {
-  padding: 10px;
+  display: block;
+  padding: 3px;
 }
 
 .confirmation-info {
   padding-right: 5px;
+  white-space: pre;
 }
