--- a/src/app/badge-demonstration/badge-demonstration.component.html
+++ b/src/app/badge-demonstration/badge-demonstration.component.html
@@ -13,11 +13,13 @@
      yourPopupAreaTrigger="hover"
      [popupDelay]="350"
 >
-  <div yourPopupArea class="your-badge error" position="bottom center" width="250px">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  </div>
+  <your-popup-area position="bottom" width="250px">
+    <div class="your-badge error">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    </div>
+  </your-popup-area>
   Error badge with description
 </div>
