--- a/src/app/button-demonstration/button-demonstration.component.html
+++ b/src/app/button-demonstration/button-demonstration.component.html
@@ -1,19 +1,16 @@
 <your-card yourFlexBox="vertical">
-  <button yourButton [yourPopupAreaTrigger] class="single-in-row">
-    <your-confirmation-area yourPopupArea (onSubmit)="onSubmit()" (onDecline)="onDecline()"></your-confirmation-area>
+  <button yourButton class="single-in-row">
     Simple button
   </button>
 
 
   <button yourButton [yourPopupAreaTrigger]>
-    <your-options
-      [options]="options"
-      (onSelect)="onSelect($event)"
-      yourPopupArea
-      position="bottom center"
-      width="100%"
-    ></your-options>
-    <your-confirmation-area yourPopupArea (onSubmit)="onSubmit()" (onDecline)="onDecline()"></your-confirmation-area>
-    Button with dropdown select
+    <your-popup-area position="left">
+      <your-confirmation-area (onSubmit)="onSubmit()" (onDecline)="onDecline()"></your-confirmation-area>
+    </your-popup-area>
+    Button with confirmation
   </button>
+
+
+
 </your-card>
