Fix locale in calendar Fix empty array in multiple select Fix overflow value label in select Fix padding in input label (size s) Fix disabled button in popup-area

--- a/projects/your-style/src/lib/form/form-field/form-field.component.scss
+++ b/projects/your-style/src/lib/form/form-field/form-field.component.scss
@@ -23,6 +23,8 @@
     cursor: pointer;
 
     .form_field_value {
+      overflow: hidden;
+      text-overflow: ellipsis;
       min-height: 1.145em;
     }
   }
