--- a/projects/your-style/src/lib/theming/popup-area.scss
+++ b/projects/your-style/src/lib/theming/popup-area.scss
@@ -1,7 +1,7 @@
 .popup-area-trigger {
   position: relative;
 
-  &.clickable-area {
+  &.clickable-area:not([disabled]) {
     cursor: pointer;
   }
 }
