--- a/src/app/badge-demonstration/badge-demonstration.component.html
+++ b/src/app/badge-demonstration/badge-demonstration.component.html
@@ -9,11 +9,8 @@
 <div class="your-badge warn">Warn badge</div>
 
 
-<div class="your-badge error"
-     yourPopupAreaTrigger="hover"
-     [popupDelay]="350"
->
-  <your-popup-area position="bottom" width="250px">
+<div class="your-badge error" yourPopupAreaTrigger="hover">
+  <your-popup-area position="top" width="250px">
     <div class="your-badge error">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit,
       sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
