--- a/projects/your-style/src/lib/form/select/multiple-select/multiple-select.component.html
+++ b/projects/your-style/src/lib/form/select/multiple-select/multiple-select.component.html
@@ -24,6 +24,6 @@
 </your-popup-area>
 
 <div class="form_field_icons">
-  <span class="form_field_icon form_field_icon_clear" *ngIf="!!value" (click)="clearValue($event)"><i class="fas fa-times"></i></span>
+  <span class="form_field_icon form_field_icon_clear" *ngIf="hasValue()" (click)="clearValue($event)"><i class="fas fa-times"></i></span>
   <i class="form_field_icon form_field_icon_caret fas fa-caret-down"></i>
 </div>
