--- a/projects/your-style/src/lib/theming/main.scss
+++ b/projects/your-style/src/lib/theming/main.scss
@@ -21,11 +21,7 @@ body {
 @mixin body_theme($theme) {
   body {
     $scheme: get_color_scheme($theme, back);
-
-    $background: get_color($scheme);
-    $background2: lighten($background, 12.55);
-    background: get_gradient_background($background, $background2, 45deg, no-repeat, fixed);
-
+    background: get_gradient_background($theme);
     color: get_color($scheme, f);
   }
 }
