1) Add expandable-panel 2) Change default size of card 3) Enable colors changing for card

--- a/projects/your-style/src/lib/theming/card.scss
+++ b/projects/your-style/src/lib/theming/card.scss
@@ -22,13 +22,24 @@
 }
 
 @mixin card_theme($theme) {
-  $scheme: get_color_scheme($theme, back);
+  $default_scheme: get_color_scheme($theme, back);
 
   your-card {
-    $background: get_color($scheme);
-    background: $background;
+    background: get_color($default_scheme);
 
-    color: get_color($scheme, f);
+    color: get_color($default_scheme, f);
     box-shadow: get_box_shadow($theme);
+  }
+
+
+  @each $scheme_name in get_schemes_names($theme) {
+    $scheme: get_color_scheme($theme, $scheme_name);
+
+    your-card.your-card-color-#{$scheme_name} {
+      background: get_color($scheme);
+
+      color: get_color($scheme, f);
+      box-shadow: get_box_shadow($theme);
+    }
   }
 }
